[package]
name = "ddns"
version = "0.1.0"
edition = "2021"

[dependencies]
get_if_addrs = "0.5.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
